Keep SIE import sources immutable